--- a/book/pom.xml
+++ b/book/pom.xml
@@ -111,6 +111,7 @@ along with semanticcms-theme-documentation.  If not, see <http://www.gnu.org/lic
 			<type>pom</type>
 			<scope>provided</scope>
 			<optional>true</optional>
+			<exclusions><exclusion><groupId>*</groupId><artifactId>*</artifactId></exclusion></exclusions>
 		</dependency>
 	</dependencies>
 </project>
