--- a/pom.xml
+++ b/pom.xml
@@ -140,6 +140,9 @@ along with semanticcms-theme-documentation.  If not, see <http://www.gnu.org/lic
 				<groupId>com.aoindustries</groupId><artifactId>aocode-public</artifactId><version>2.1.0-SNAPSHOT</version>
 			</dependency>
 			<dependency>
+				<groupId>org.webjars</groupId><artifactId>html5shiv</artifactId><version>3.7.3-1</version>
+			</dependency>
+			<dependency>
 				<groupId>org.webjars</groupId><artifactId>jquery</artifactId><version>3.4.1</version>
 			</dependency>
 			<dependency>
@@ -201,6 +204,9 @@ along with semanticcms-theme-documentation.  If not, see <http://www.gnu.org/lic
 		</dependency>
 		<dependency>
 			<groupId>com.aoindustries</groupId><artifactId>aocode-public</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.webjars</groupId><artifactId>html5shiv</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>org.webjars</groupId><artifactId>jquery</artifactId>
